--- a/src/main/resources/static/css/style.css
+++ b/src/main/resources/static/css/style.css
@@ -94,6 +94,17 @@ body {
     position:relative;
 }
 
+
+.menu-item.empty.lunch {
+    border: 5px dashed antiquewhite;
+    background:none;
+}
+
+.menu-item.empty.dinner {
+    border: 5px dashed beige;
+    background:none;
+}
+
 .menu-item.lunch {
     background-color: antiquewhite;
 }
@@ -130,16 +141,48 @@ body {
     color:#555555;
 }
 .meal-type-tag {
-    color: white;
-    font-weight: bold;
+    color: #fff;
+    font-weight: 900;
     text-transform: uppercase;
     position: absolute;
     top: -1rem;
     font-size: 2.2rem;
     left: -0.2rem;
+  
 }
 
 .meal-item-wrapper {
     margin-top: 3rem;
     color: #555555;
+}
+
+.sideBar-container-wrapper {
+    border-left: 1px solid rgba(0,0,0,.125);
+}
+
+.sideBar-container {
+    position: sticky;
+    top: 0; 
+    padding: 10px;
+}
+
+.vertical-letters {
+    writing-mode: vertical-lr;
+    text-orientation: upright;
+    padding:0;
+    margin:0;
+    letter-spacing: -6px;
+    display: flex;
+    align-items: center;
+    justify-content: flex-start;
+    font-weight: 900;
+}
+
+.sideBar-container .sideBar-menu-item.empty {
+    
+    border-radius:10px; 
+    height: 48%; 
+    width:100%;
+    border: 3px dashed antiquewhite;
+
 }
