--- a/src/main/resources/static/css/style.css
+++ b/src/main/resources/static/css/style.css
@@ -179,18 +179,61 @@ body {
     font-weight: 900;
 }
 
+.sideBar-container .sideBar-menu-item-wrapper {
+    height: 46%
+}
+
 .sideBar-container .sideBar-menu-item {
     border-radius:10px; 
     height: 100%; 
-    /* width:100%; */
     margin-left: 10px;
     padding: 10px 15px;
     background-color: antiquewhite;
+    position: relative;
+    cursor:pointer;
 }
 
 .sideBar-container .sideBar-menu-item.empty {
-    
-    background: none;
-    border: 3px dashed antiquewhite;
+    border: 3px dashed #ffbdb5;
+    background-color: #fff8ee;
 
+}
+
+.sideBar-container .date-wrapper {
+    background-color: #eeeeee;
+    border-radius: 50px;
+    padding: 15px 5px 8px;
+}
+
+.sideBar-container .date-box {
+    height: 40px;
+}
+
+.date-box h6 {
+    font-size: 0.8rem
+}
+
+.date-wrapper h4 {
+    font-weight: 900;
+    border-radius: 50%;
+    background-color: white;
+    width: 40px;
+    height: 40px;
+}
+
+.recipe-wrapper {
+    position:sticky;
+    top:0;
+}
+
+.sideBar-menu-item-label {
+    position: absolute;
+    right: 15px;
+    top: 10px;
+    color: #00000030;
+    display: none;
+}
+
+.sideBar-menu-item:hover > .sideBar-menu-item-label {
+    display: block;
 }
