--- a/src/main/resources/templates/recipes.html
+++ b/src/main/resources/templates/recipes.html
@@ -71,12 +71,25 @@
               th:each="recipe: ${user.recipes}"
               class="p-2 col-xs-12 col-sm-6 col-md-4 col-lg-3"
             >
-              <div class="card" style="height: 100%">
-                <div class="card-body">
-                  <h5 th:text="${recipe.name}" class="card-title" />
+              <div class="card" style="height:100%;">
+                <div class="card-body"  style="padding-bottom: 1rem;">
+                  <a
+                    th:href="@{/user/recipes/removeRecipeFromList(recipeId=${recipe.id})}"
+                    type="button"
+                    style="position: absolute; right: 15px; top: 10px;"
+                  >
+                    <svg aria-label="Unsave" color="rgb(255, 48, 64)" fill="rgb(255, 48, 64)" height="24" role="img" viewBox="0 0 48 48" width="24"><title>Unsave</title><path d="M34.6 3.1c-4.5 0-7.9 1.8-10.6 5.6-2.7-3.7-6.1-5.5-10.6-5.5C6 3.1 0 9.6 0 17.6c0 7.3 5.4 12 10.6 16.5.6.5 1.3 1.1 1.9 1.7l2.3 2c4.4 3.9 6.6 5.9 7.6 6.5.5.3 1.1.5 1.6.5s1.1-.2 1.6-.5c1-.6 2.8-2.2 7.8-6.8l2-1.8c.7-.6 1.3-1.2 2-1.7C42.7 29.6 48 25 48 17.6c0-8-6-14.5-13.4-14.5z"></path></svg>
+                  </a>
+                  
+                    <h5 class="card-title recipe-title" >
+                      <a th:text="${recipe.name}" th:href="@{/user/recipes/recipe(recipeId=${recipe.id})}" />
+                    </h5>
+
                   <h6
                     class="card-subtitle mb-2 text-body-secondary"
-                    style="font-size: 0.8rem"
+                    style="font-size: 0.8rem;
+                      color: #666;
+                      font-weight: 300;"
                   >
                     Saved by
                     <span th:text="${#lists.size(recipe.users)}" /> users
@@ -89,20 +102,6 @@
                     Complete in
                     <span th:text="${#lists.size(recipe.directions)}" /> steps
                   </p>
-                  <a
-                    th:href="@{/user/recipes/recipe(recipeId=${recipe.id})}"
-                    type="button"
-                    class="btn btn-primary btn-sm"
-                  >
-                    See Recipe
-                  </a>
-                  <a
-                    th:href="@{/user/recipes/removeRecipeFromList(recipeId=${recipe.id})}"
-                    type="button"
-                    class="btn btn-warning btn-sm"
-                  >
-                    Unsave
-                  </a>
                 </div>
               </div>
             </div>
